--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,12 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+cdk.context.json
 
 # Environment
 .env
 .env.*
 !.env.template
+
+# Resources
+resources/
